...
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="n_a">N/A</string>
    <string name="_100">100</string>

    <string name="google_maps_key" translatable="false">AIzaSyCGn9yLi87sBNtDYi0Y7T2oQAm90SdseTU</string>
</resources>
